--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,7 +27,17 @@
 .App-link {
   color: #61dafb;
 }
-
+.App-footer {
+  background-color: #282c34;
+  color: white;
+  padding: 20px;
+  text-align: center;
+} 
+.App-body {
+  padding: 20px;
+  background-color: #f0f0f0;
+  color: #333;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
