--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   --color-fondo-claro: #F7FAFC;
   --color-texto: #2D3748;
   --color-boton-claro: #FFFFFF;
+  --color-violeta: #787FF6;
+  --color-turquesa: #00d2ff;
+  
 }
 
 body {
@@ -18,17 +21,6 @@ body {
 
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
